@@ -147,6 +147,16 @@ Features
 - ``pyramid.testing.DummyRequest`` now supports methods supplied by the
   ``pyramid.util.InstancePropertyMixin`` class such as ``set_property``.
 
+- Request properties and methods added via ``config.set_request_property`` or
+  ``config.add_request_method`` are now available to tweens.
+
+- Request properties and methods added via ``config.set_request_property`` or
+  ``config.add_request_method`` are now available to tweens.
+
+- Request properties and methods added via ``config.set_request_property`` or
+  ``config.add_request_method`` are now available in the request object
+  returned from ``pyramid.paster.bootstrap``.
+
 Deprecations
 ------------
 
